添加torrent下载
