# server/routers/router.go
@@ -59,6 +59,8 @@ func InitRouter() *gin.Engine {
 		apiv1.DELETE("/articles/:id", v1.DeleteArticle)
 		//生成文章海报
 		apiv1.POST("/articles/poster/generate", v1.GenerateArticlePoster)
+		//生成文章海报
+		apiv1.POST("/download/torrent", v1.TorrentDownload)
 	}
 
 	return r
